# openclaw-agent-manger

./: .gitignore  CLAUDE.md  PLAN.md  README.md  start.bat  start.sh  stop.bat  stop.sh
.claude/: settings.local.json
backend/: README.md  pyproject.toml
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/api/: agents.py  gateway.py  roles.py  teams.py
backend/src/models/: __init__.py  agent.py  role.py  team.py
backend/src/schemas/: __init__.py  agent.py  role.py  team.py
backend/src/services/: openclaw_service.py  seed_data.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/api/: agents.ts  gateway.ts  index.ts  roles.ts  teams.ts
frontend/src/components/: TopologyGraph.vue
frontend/src/router/: index.ts
frontend/src/stores/: agents.ts  roles.ts  teams.ts
frontend/src/types/: index.ts
frontend/src/views/: AgentsView.vue  GatewayView.vue  RolesView.vue  TeamsView.vue
